--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Whack A Mole!</title>
+  <link rel="icon" href="mole.svg" />
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <div class="container">
   <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
-
+  
   <div class="game">
     <div class="hole hole1">
       <div class="mole"></div>
@@ -31,7 +31,8 @@
       <div class="mole"></div>
     </div>
   </div>
-
+  <button onClick="startGame()">Start!</button>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
